Implementing mongoose + CRUD interactions with Database
